tests/ui/consts/const-cast-wrong-type.stderr
error[E0308]: mismatched types
  --> $DIR/const-cast-wrong-type.rs:2:22
   |
LL | const b: *const i8 = &a as *const i8;
   |                      ^^^^^^^^^^^^^^^ expected `u8`, found `i8`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
